feat: Rename app to Agende + and add Supabase dependency
Update project name, metadata, and UI elements to reflect the new application name "Agende +".
Add `@supabase/supabase-js` dependency for future integration.
Introduce new types and store logic for salon owner authentication and appointment cancellation.

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
     
     <!-- PWA & Mobile App Capabilities -->
-    <meta name="application-name" content="Salão Online" />
-    <meta name="apple-mobile-web-app-title" content="Salão Online" />
+    <meta name="application-name" content="Agende +" />
+    <meta name="apple-mobile-web-app-title" content="Agende +" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="theme-color" content="#e11d48" />
     
     <!-- Icons (Simulated for MVP) -->
-    <link rel="apple-touch-icon" href="https://ui-avatars.com/api/?name=Sal%C3%A3o+Online&background=e11d48&color=fff&rounded=true&bold=true" />
-    <link rel="icon" type="image/png" href="https://ui-avatars.com/api/?name=SO&background=e11d48&color=fff&rounded=true&bold=true" />
+    <link rel="apple-touch-icon" href="https://ui-avatars.com/api/?name=Agende+Plus&background=e11d48&color=fff&rounded=true&bold=true" />
+    <link rel="icon" type="image/png" href="https://ui-avatars.com/api/?name=AP&background=e11d48&color=fff&rounded=true&bold=true" />
 
-    <title>Salão Online - Gestão Inteligente</title>
+    <title>Agende + | Gestão Inteligente</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -98,7 +98,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.86.2"
   }
 }
 </script>
